[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "videograph-core"
version = "1.0.0"
description = "Core VideoGraph backend and graph-based video QA engine."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.109.0",
  "networkx>=3.0",
  "numpy>=1.24.0",
  "opencv-python-headless>=4.9.0",
  "openai>=1.0.0",
  "pydantic>=2.0.0",
  "python-dotenv>=1.0.0",
  "pyyaml>=6.0.0",
  "scenedetect>=0.6.3",
  "uvicorn>=0.27.0",
  "yt-dlp>=2024.1.0",
]

[project.scripts]
videograph = "videograph.main:main"

[tool.setuptools.packages.find]
include = ["videograph*"]

